--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,13 @@ a {
 .section {
   margin-bottom: 70px;
 }
+
+.inline {
+  display: inline
+}
+
+.hover:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: 0.3s;
+}
