--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,14 @@ body {
   font-family: "AnimeAceLight", sans-serif;
 }
 
+p {
+	color: #fff !important;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	color: #fff !important;
+}
+
 .black-fark-body-papa {
   color: #111 ;
 }
